# copilotkit-react-fastapi

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/scripts/: generate_token.py
backend/src/backend/: __init__.py  agent.py  auth.py  config.py  copilotkit_handler.py  database.py  main.py  services.py
data/: app.db
docs/: jwt-auth-design.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
runtime/: .env.example  package-lock.json  package.json
runtime/src/: index.ts
