[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hirokts", email = "9495043+hirokts@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
backend = "backend:main"
dev = "backend:dev"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
